# zeta_framework

./: .clang-format  .clangd  .gitignore  .gitmodules  .rgignore  CMakeLists.txt  README.md  build.sh  naming_conventions.txt  todo.txt
zeta_framework/: CMakeLists.txt
zeta_framework/include/: zf.h  zf_assets.h  zf_game.h  zf_gfx.h  zf_gfx_old.h  zf_gl.h  zf_input.h  zf_math.h  zf_rendering.h  zf_window.h
zeta_framework/src/: zf_assets.cpp  zf_game.cpp  zf_gfx_old.cpp  zf_gl.cpp  zf_input.cpp  zf_math.cpp  zf_rendering.cpp  zf_rendering_old.cpp  zf_window.cpp
zeta_framework/src/graphics/: zf_fonts.cpp  zf_rendering.cpp  zf_shaders.cpp  zf_surfaces.cpp  zf_textures.cpp
zf/: CMakeLists.txt
zf/include/: zf.h  zf_game.h  zf_gfx.h  zf_gfx_old.h  zf_rendering.h  zf_rng.h  zf_window.h
zf/include/zf/: assets.h  game.h  gfx.h  rendering.h  rng.h  window.h  zf_audio.h  zf_audio_sys.h  zf_debug.h  zf_game.h  zf_gfx.h  zf_platform.h  zf_renderer.h  zf_rendering.h  zf_rng.h  zf_window.h
zf/include/zf_private/: zf_gl.h
zf/shaders/: quad_fs.sc  varying.def.sc
zf/src/: audio.cpp  game.cpp  gfx.cpp  rendering.cpp  rng.cpp  window.cpp  zf.cpp  zf_audio.cpp  zf_audio_sys.cpp  zf_debug.cpp  zf_game.cpp  zf_gfx.cpp  zf_gl.cpp  zf_platform.cpp  zf_renderer.cpp  zf_rendering.cpp  zf_rng.cpp  zf_window.cpp
zf_asset_builder/: CMakeLists.txt
zf_asset_builder/src/: zab.h  zab_building.cpp  zab_entry.cpp  zab_shaders.cpp
zf_asset_packer/: CMakeLists.txt
zf_asset_packer/src/: entry.cpp  packing.cpp  packing.h  zap.h  zap_entry.cpp  zap_fonts.cpp  zap_main.cpp  zap_packing.cpp  zap_packing.h  zap_shaders.cpp  zap_textures.cpp
zf_core/: CMakeLists.txt
zf_core/include/: zc.h  zc_gfx.h  zc_graphics.h  zc_io.h  zc_math.h  zc_mem.h
zf_core/include/mem/: zc_array_list.h  zc_avl_tree.h  zc_bit_vector.h  zc_bitset.h  zc_dynamic_array.h  zc_heaps.h  zc_mem.h  zc_sorting.h  zc_stack.h  zc_static_array.h  zc_strs.h  zc_unordered_map.h
zf_core/include/zc/: audio.h  debug.h  gfx.h  io.h  math.h  type_traits.h  types.h  zc_algos.h  zc_allocators.h  zc_array_serial.h  zc_audio.h  zc_basic.h  zc_bits.h  zc_debug.h  zc_ds.h  zc_essential.h  zc_gfx.h  zc_heaps.h  zc_io.h  zc_maps.h  zc_math.h  zc_mem.h  zc_seqs.h  zc_sorting.h  zc_strs.h
zf_core/include/zc/ds/: zc_activity_array.h  zc_array.h  zc_array_serial.h  zc_bit_vector.h  zc_hash_map.h  zc_heaps.h  zc_linear.h  zc_list.h  zc_min_heap.h  zc_queue.h  zc_stack.h  zc_unordered_map.h
zf_core/include/zc/mem/: allocators.h  arrays.h  (+12 more)
zf_core/src/: audio.cpp  debug.cpp  gfx.cpp  io.cpp  math.cpp  zc_allocators.cpp  zc_audio.cpp  zc_basic.cpp  zc_bits.cpp  zc_debug.cpp  zc_essential.cpp  zc_gfx.cpp  zc_graphics.cpp  zc_io.cpp  zc_math.cpp  zc_mem.cpp  zc_strs.cpp
zf_core/src/ds/: zc_bit_vector.cpp
zf_core/src/mem/: bit_vector.cpp  bits.cpp  mem.cpp  strs.cpp
zf_core_lib/: CMakeLists.txt
zf_core_lib/docs/: toggle_macros.txt
zf_core_lib/include/: zcl.h
zf_core_lib/include/zcl/: zcl_algos.h  zcl_arenas.h  zcl_arrays.h  zcl_audio.h  zcl_basic.h  zcl_bits.h  zcl_ds.h  zcl_ds_hash_maps.h  zcl_ds_lists.h  zcl_errors.h  zcl_file_sys.h  zcl_gfx.h  zcl_hash_map.h  zcl_hash_maps.h  zcl_io.h  zcl_kv_stores.h  zcl_list.h  zcl_lists.h  zcl_math.h  zcl_mem.h  zcl_printing.h  zcl_rand.h  zcl_rng.h  zcl_serialization.h  zcl_streams.h  zcl_strs.h  zcl_types.h  zcl_untitled.h
zf_core_lib/src/: zcl_arenas.cpp  zcl_audio.cpp  zcl_basic.cpp  zcl_basic_arenas.cpp  zcl_basic_errors.cpp  zcl_bits.cpp  zcl_ds.cpp  zcl_errors.cpp  zcl_file_sys.cpp  zcl_gfx.cpp  zcl_io.cpp  zcl_math.cpp  zcl_mem.cpp  zcl_printing.cpp  zcl_rand.cpp  zcl_rng.cpp  zcl_serialization.cpp  zcl_streams.cpp  zcl_strs.cpp  zcl_untitled.cpp
zf_core_lib/src/basic/: zcl_basic_arenas.cpp  zcl_basic_errors.cpp
zf_core_lib/src/gfx/: zcl_gfx_fonts.cpp  zcl_gfx_shaders.cpp  zcl_gfx_textures.cpp
zf_game_lib/: CMakeLists.txt
zf_game_lib/include/: zgl.h  zgl_private.h
zf_game_lib/include/zgl/: zgl_audio.h  zgl_audio_internal.h  zgl_audio_private.h  zgl_audio_public.h  zgl_batch_renderer.h  zgl_config.h  zgl_frame.h  zgl_game.h  zgl_gfx.h  zgl_gfx_core.h  zgl_gfx_first.h  zgl_gfx_helpers.h  zgl_gfx_private.h  zgl_gfx_public.h  zgl_gfx_second.h  zgl_input.h  zgl_platform.h  zgl_platform_private.h  zgl_platform_public.h  zgl_renderer.h  zgl_rendering.h  zgl_rng.h  zgl_test.h
zf_game_lib/shaders/: frag_shader_default.sc  frag_shader_tint.sc  fragment_shader_alpha.sc  fragment_shader_blend.sc  fragment_shader_str.sc  test_fs.sc
zf_game_lib/shaders/batch_triangle/: frag_shader_tint.sc  varying.def.sc  vert_shader_default.sc
zf_game_lib/src/: zgl.cpp  zgl_audio.cpp  zgl_audio_logic.cpp  zgl_audio_state.cpp  zgl_audio_ticket.cpp  zgl_audio_tickets.cpp  zgl_batch_renderer.cpp  zgl_game.cpp  zgl_game_errors.cpp  zgl_gfx.cpp  zgl_gfx_core.cpp  zgl_gfx_first.cpp  zgl_gfx_helpers.cpp  zgl_gfx_logic.cpp  zgl_gfx_old.cpp  zgl_gfx_rendering.cpp  zgl_gfx_second.cpp  zgl_gfx_state.cpp  zgl_gfx_state_core.cpp  zgl_gfx_state_rendering.cpp  zgl_gfx_tickets.cpp  zgl_input.cpp  zgl_platform.cpp  zgl_platform_logic.cpp  zgl_platform_state.cpp  zgl_platform_tickets.cpp  zgl_renderer.cpp  zgl_renderer_logic.cpp  zgl_rendering.cpp  zgl_rendering_core.cpp  zgl_rendering_helpers.cpp  zgl_rng.cpp  zgl_test.cpp
zf_game_lib/src/shaders/: quad_vs.sc
zfw_asset_packer/: CMakeLists.txt
zfw_asset_packer/src/: zfwap.h  zfwap_fonts.c  zfwap_fonts.cpp  zfwap_main.c  zfwap_main.cpp  zfwap_shaders.c  zfwap_shaders.cpp  zfwap_textures.c  zfwap_textures.cpp
zfw_core/: CMakeLists.txt
zfw_core/include/: zfwc.h  zfwc_game.h  zfwc_graphics.h  zfwc_input.h  zfwc_math.h  zfwc_rng.h
zfw_core/src/: zfwc_game.c  zfwc_game.cpp  zfwc_input.c  zfwc_input.cpp  zfwc_math.c  zfwc_math.cpp  zfwc_rng.c  zfwc_rng.cpp
zfw_core/src/graphics/: zfwc_fonts.c  zfwc_fonts.cpp  zfwc_graphics.c  zfwc_graphics.cpp  zfwc_shaders.c  zfwc_shaders.cpp  zfwc_surfaces.c  zfwc_surfaces.cpp  zfwc_textures.c  zfwc_textures.cpp
zfw_shared/: CMakeLists.txt
zfw_shared/include/: zfws.h  zfws_mem.h
zfw_shared/src/: zfws.c  zfws.cpp  zfws_mem.c
(+59 files in other folders)
